chore: set node version to use

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,5 +51,6 @@ jobs:
             cd ~/sites/feeds
             git pull
             source ~/.nvm/.profile
+            nvm install
             npm ci
             npm start
